updated the styles.css

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AuraBelle Petals | Gallery</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- Header -->
@@ -45,6 +45,18 @@
       <div class="gallery-item">
         <img src="assets/images/mixed_bouquet.jpg" alt="Mixed Bouquet">
       </div>
+       <div class="gallery-item">
+        <img src="assets/images/peonies.jpg" alt="Beautiful Peonies">
+      </div>
+       <div class="gallery-item">
+        <img src="assets/images/hydrangeas.jpg" alt="Purple Hydrangeas">
+      </div>
+       <div class="gallery-item">
+        <img src="assets/images/carnations.jpg" alt="Carnations">
+      </div>
+       <div class="gallery-item">
+        <img src="assets/images/dahlias.jpg" alt="Pretty Dahlias">
+      </div>
     </div>
   </section>
 
@@ -52,5 +64,6 @@
   <footer>
     <p>&copy; 2025 AuraBelle Petals | All Rights Reserved</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
