--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AuraBelle Petals | Home</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   
   <header>
-    <div class="logo">AuraBelle Petals</div>
+    <div class="logo">AuraBelle Petals Flower Farm</div>
     <nav>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
@@ -24,7 +24,7 @@
   <section class="hero">
     <div class="hero-text">
       <h1>Welcome to AuraBelle Petals Flower Farm</h1>
-      <p>Where nature blooms and beauty begins 🌿</p>
+      <p>Where nature blooms and beauty begins</p>
       <a href="shop.html" class="btn">Shop Bouquets</a>
     </div>
   </section>
