--- a/shop.html
+++ b/shop.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AuraBelle Petals | Shop</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/script.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- Header -->
@@ -30,7 +29,7 @@
     <div class="shop-grid">
       <!-- Product 1 -->
       <div class="product-card">
-        <img src="images/roses-bouquet.jpg" alt="Rose Bouquet">
+        <img src="assets/images/rose_bouquet.jpg" alt="Rose Bouquet">
         <h3>Classic Rose Bouquet</h3>
         <p>Elegant red roses wrapped with love.</p>
         <span class="price">Ksh 800</span>
@@ -39,7 +38,7 @@
 
       <!-- Product 2 -->
       <div class="product-card">
-        <img src="images/tulips-bouquet.jpg" alt="Tulip Bouquet">
+        <img src="assets/images/tulips_bouquet.jpg" alt="Tulip Bouquet">
         <h3>Spring Tulips</h3>
         <p>Bright tulips that capture the joy of spring.</p>
         <span class="price">Ksh 800</span>
@@ -48,16 +47,16 @@
 
       <!-- Product 3 -->
       <div class="product-card">
-        <img src="images/daisies-bouquet.jpg" alt="Daisy Bouquet">
+        <img src="assets/images/daisies_bouquet.jpg" alt="Daisy Bouquet">
         <h3>Daisy Delight</h3>
-        <p>Fresh daisies symbolizing purity and happiness.</p>
+        <p>Fresh daisies symbolizing purity.</p>
         <span class="price">Ksh 1,000</span>
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
 
       <!-- Product 4 -->
       <div class="product-card">
-        <img src="images/mixed-bouquet.jpg" alt="Mixed Bouquet">
+        <img src="assets/images/mixed_bouquet2.jpg" alt="Mixed Bouquet">
         <h3>Celebration Mix</h3>
         <p>A colorful bouquet for life’s special moments.</p>
         <span class="price">Ksh 1,200</span>
@@ -70,5 +69,6 @@
   <footer>
     <p>&copy; 2025 AuraBelle Petals | All Rights Reserved</p>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
