--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AuraBelle Petals | About</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- Header -->
@@ -30,11 +30,11 @@
       </div>
       <div class="about-text">
         <p>
-          At <strong>AuraBelle Petals</strong>, we believe every bloom tells a story.  
-          Our family-run flower farm started with a simple dream: to grow blossoms that bring warmth, love, and joy into people’s lives.  
+          At AuraBelle Petals, we believe every bloom tells a story.  
+          Our family-run flower farm started with a simple dream: to grow blossoms that bring warmth, love and joy into people’s lives.  
         </p>
         <p>
-          From fragrant roses to cheerful daisies and vibrant tulips, each flower is nurtured with care, harvested sustainably, and arranged with creativity.  
+          From fragrant roses to cheerful daisies and vibrant tulips, each flower is nurtured with care, harvested sustainably and arranged with creativity.  
           Whether you’re celebrating life’s milestones, hosting an event, or just brightening your day, AuraBelle Petals is here to make every moment bloom beautifully.  
         </p>
         <p>
@@ -44,7 +44,7 @@
     </div>
   </section>
 
-  <<!-- Values Section -->
+  <!-- Values Section -->
 <section class="values">
   <h2>Our Values</h2>
   <div class="values-grid">
@@ -62,7 +62,7 @@
     </div>
     <div class="value-card">
       <h3>🎨 Creativity</h3>
-      <p>Our arrangements are more than flowers — they are works of art made for you.</p>
+      <p>Our arrangements are more than flowers, they are works of art made for you.</p>
     </div>
   </div>
 </section>
@@ -71,5 +71,6 @@
   <footer>
     <p>&copy; 2025 AuraBelle Petals | All Rights Reserved</p>
   </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
