--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AuraBelle Petals | Contact</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
  
 </head>
 <body>
@@ -25,7 +25,7 @@
   <!-- Contact Section -->
   <section class="contact">
     <h1>Contact Us</h1>
-    <p>We’d love to hear from you! 🌷 Whether it’s about custom bouquets, farm visits, or events, reach out below.</p>
+    <p>We’d love to hear from you! Whether it’s about custom bouquets, farm visits or events, reach out below.</p>
 
     <div class="contact-container">
       <!-- Contact Form -->
