--- a/about.html
+++ b/about.html
@@ -30,15 +30,16 @@
       </div>
       <div class="about-text">
         <p>
-          At AuraBelle Petals, we believe every bloom tells a story.  
-          Our family-run flower farm started with a simple dream: to grow blossoms that bring warmth, love and joy into people’s lives.  
+         <strong>At AuraBelle Petals, we believe every bloom tells a story.</strong> 
+         <strong>  
+          Our family-run flower farm started with a simple dream: to grow blossoms that bring warmth, love and joy into people’s lives. </strong> 
         </p>
         <p>
-          From fragrant roses to cheerful daisies and vibrant tulips, each flower is nurtured with care, harvested sustainably and arranged with creativity.  
-          Whether you’re celebrating life’s milestones, hosting an event, or just brightening your day, AuraBelle Petals is here to make every moment bloom beautifully.  
+          <strong>From fragrant roses to cheerful daisies and vibrant tulips, each flower is nurtured with care, harvested sustainably and arranged with creativity.</strong> 
+          <strong>Whether you’re celebrating life’s milestones, hosting an event, or just brightening your day, AuraBelle Petals is here to make every moment bloom beautifully.</strong>
         </p>
         <p>
-          Our mission is simple: <em>spread happiness, one petal at a time.</em>   
+          <strong>Our mission is simple:</strong><strong><em>spread happiness, one petal at a time.</em></strong>   
         </p>
       </div>
     </div>
