--- a/gallery.html
+++ b/gallery.html
@@ -64,6 +64,7 @@
   <footer>
     <p>&copy; 2025 AuraBelle Petals | All Rights Reserved</p>
   </footer>
+   <div id="lightbox"></div>
   <script src="js/script.js"></script>
 </body>
 </html>
